# picam2fits

./: CMakeLists.txt  README.md  picam2fits.cpp
